packages/kit/test/apps/basics/src/routes/errors/stack-trace/_bad.js
const bad = foo().toUpperCase();
export default bad;

// @ts-expect-error
/** @returns {string} */
function foo() {}
